server/zenith/test/snapshots/tests__media__get_seasons_for_show.snap
---
source: server/zenith/test/media.rs
expression: "app.get(\"/shows/4/seasons\").await"
---
[
  {
    "backdrop": null,
    "end_date": null,
    "external_ids": {
      "tmdb": null
    },
    "id": 7,
    "name": "Season 1",
    "overview": null,
    "parent": {
      "id": 4,
      "index": 1,
      "name": "Test Show 1"
    },
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "type": "season",
    "user_data": {
      "type": "collection",
      "unwatched": 2
    }
  },
  {
    "backdrop": null,
    "end_date": null,
    "external_ids": {
      "tmdb": null
    },
    "id": 8,
    "name": "Season 2",
    "overview": null,
    "parent": {
      "id": 4,
      "index": 2,
      "name": "Test Show 1"
    },
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "type": "season",
    "user_data": {
      "type": "collection",
      "unwatched": 2
    }
  }
]
