server/zenith/test/snapshots/tests__media__get_show_by_id.snap
---
source: server/zenith/test/media.rs
assertion_line: 18
expression: "app.get(\"/tv/shows/4\").await"
---
{
  "backdrop": null,
  "end_date": null,
  "external_ids": {
    "tmdb": null
  },
  "id": 4,
  "name": "Test Show 1",
  "overview": null,
  "poster": null,
  "start_date": null,
  "user_data": {
    "unwatched": 4
  }
}
