server/zenith/test/snapshots/tests__media__get_single_item_by_id.snap
---
source: server/zenith/test/media.rs
expression: "app.get(\"/items/1\").await"
---
{
  "backdrop": null,
  "end_date": null,
  "external_ids": {
    "tmdb": null
  },
  "id": 1,
  "name": "Test Movie 1",
  "overview": null,
  "poster": null,
  "start_date": null,
  "thumbnail": null,
  "type": "movie",
  "user_data": {
    "is_watched": false,
    "last_watched_at": 1662911415,
    "position": 50.0,
    "type": "video"
  },
  "video_file": {
    "duration": 100.0,
    "format": null,
    "path": "/path/to/Test Movie 1/Test Movie 1.mp4",
    "streams": [],
    "subtitles": []
  }
}
