server/zenith/test/snapshots/tests__media__search_by_name_with_item_types.snap
---
source: server/zenith/test/media.rs
assertion_line: 41
expression: "app.get(\"/items?item_type[]=movie&item_type[]=show&name=1\").await"
---
[
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "director": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 1,
    "name": "Test Movie 1",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "movie",
    "user_data": {
      "is_watched": false,
      "last_watched_at": 1662911415,
      "position": 50.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 1,
      "path": "/path/to/Test Movie 1/Test Movie 1.mp4",
      "streams": [
        {
          "codec": "h264",
          "crop_x1": null,
          "crop_x2": null,
          "crop_y1": null,
          "crop_y2": null,
          "height": 1080,
          "id": 1,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 2,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "director": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 4,
    "name": "Test Show 1",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "show",
    "user_data": {
      "type": "collection",
      "unwatched": 4
    }
  }
]
